# autr-back

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
docker/: Dockerfile  docker-compose.yml  healthcheck.sh
docker/watchdog/: Dockerfile  watchdog.py
docs/: auto-tr_arch_doc_v0.2.md  runbook.md  strategy_analysis.md  trading_performance.md
scripts/: autr  migrate.sh  run_api.sh  run_collector.sh  run_executor.sh  run_monolith.sh  run_strategy.sh
src/autr/: __init__.py
src/autr/api/: app.py
src/autr/api/middleware/: request_id.py
src/autr/api/routes/: health.py  status.py  trading.py
src/autr/config/: settings.py
src/autr/domain/: ids.py  reconcile.py  risk_policy.py  state_machine.py  types.py
src/autr/infra/: notifier_discord.py  queue_keys.py  redis.py
src/autr/infra/bybit/: client.py
src/autr/infra/db/: factory.py  postgres.py  quant_store.py
src/autr/infra/db/migrations/: README.md  env.py
src/autr/infra/db/migrations/versions/: 0001_initial_schema.py  0002_quant_tables.py
src/autr/ops/: heartbeat.py  lifecycle.py
src/autr/services/: collector.py  executor.py  position_service.py  run_collector.py  run_executor_consumer.py  run_strategy_consumer.py  run_watchdog.py  strategy.py
src/autr/strategies/: breakout_volume_strategy.py  dual_timeframe_strategy.py  mean_reversion_strategy.py  regime_trend_strategy.py
tests/: test_ids.py  test_reconcile.py  test_state_machine.py
