[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autr-back"
version = "0.1.0"
description = "Auto trading backend"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi==0.104.1",
  "uvicorn==0.24.0",
  "pybit==5.7.0",
  "python-dotenv==1.0.0",
  "sqlalchemy==2.0.23",
  "alembic==1.12.1",
  "websockets==12.0",
  "pandas==2.1.3",
  "numpy==1.26.4",
  "ta==0.10.2",
  "schedule==1.2.0",
  "python-multipart==0.0.6",
  "pydantic==2.5.0",
  "pycryptodome==3.20.0",
  "aiosqlite==0.20.0",
  "asyncpg>=0.29.0",
  "psycopg2-binary>=2.9.0",
  "redis>=5.0.0",
  "tenacity==9.0.0",
  "slowapi==0.1.9",
  "requests>=2.31.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
